refactoring colors of map