@@ -5,7 +5,6 @@ import enums.resources.BonusResourceTypes;
 import enums.resources.LuxuryResourceTypes;
 import enums.resources.ResourceTypes;
 import enums.resources.StrategicResourceTypes;
-import models.resources.StrategicResource;
 
 import java.util.Arrays;
 import java.util.HashSet;
@@ -14,12 +13,12 @@ import java.util.Random;
 
 public enum TileBaseTypes implements TileTypes {
 
-    DESERT("desert", 0, 0, 0, -33, 1, Colors.YELLOW,new HashSet<>(List.of(TileFeatureTypes.OASIS , TileFeatureTypes.VALLEY)), new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON,LuxuryResourceTypes.GOLD,LuxuryResourceTypes.SILVER,LuxuryResourceTypes.JEWEL,LuxuryResourceTypes.MARBLE, LuxuryResourceTypes.COTTON,LuxuryResourceTypes.INCENSE,BonusResourceTypes.SHEEP))), //kavir
-    MEADOW("meadow", 2, 0, 0, -33, 1, Colors.GREEN,new HashSet<>(List.of(TileFeatureTypes.JUNGLE , TileFeatureTypes.SWAMP)),new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON,StrategicResourceTypes.HORSE,StrategicResourceTypes.COAL, BonusResourceTypes.COW, LuxuryResourceTypes.GOLD, LuxuryResourceTypes.JEWEL,LuxuryResourceTypes.COTTON,LuxuryResourceTypes.MARBLE,BonusResourceTypes.SHEEP))),// chamanzar
-    HEEL("heel", 0, 2, 0, 25, 2, Colors.BLACK,new HashSet<>(List.of(TileFeatureTypes.JUNGLE, TileFeatureTypes.FOREST)), new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON, StrategicResourceTypes.COAL , BonusResourceTypes.GAZELLE , LuxuryResourceTypes.GOLD,LuxuryResourceTypes.SILVER,LuxuryResourceTypes.JEWEL, LuxuryResourceTypes.MARBLE,BonusResourceTypes.SHEEP))),
-    MOUNTAIN("mountain", 0, 0, 0, 25, 9999, Colors.PURPLE,new HashSet<>(List.of()), new HashSet<>()),
-    OCEAN("ocean", 0, 0, 0, 25, 9999, Colors.CYAN,new HashSet<>(List.of()), new HashSet<>()),
-    PLAIN("plain", 1, 1, 0, -33, 1, Colors.RED,new HashSet<>(List.of(TileFeatureTypes.JUNGLE , TileFeatureTypes.FOREST)), new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON,StrategicResourceTypes.HORSE,StrategicResourceTypes.COAL,BonusResourceTypes.WHEAT,LuxuryResourceTypes.GOLD,LuxuryResourceTypes.JEWEL,LuxuryResourceTypes.MARBLE,LuxuryResourceTypes.IVORY,LuxuryResourceTypes.COTTON,LuxuryResourceTypes.INCENSE,BonusResourceTypes.SHEEP))), // dasht
+    DESERT("desert", 0, 0, 0, -33, 1, Colors.BROWN,new HashSet<>(List.of(TileFeatureTypes.OASIS , TileFeatureTypes.VALLEY)), new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON,LuxuryResourceTypes.GOLD,LuxuryResourceTypes.SILVER,LuxuryResourceTypes.JEWEL,LuxuryResourceTypes.MARBLE, LuxuryResourceTypes.COTTON,LuxuryResourceTypes.INCENSE,BonusResourceTypes.SHEEP))), //kavir
+    MEADOW("meadow", 2, 0, 0, -33, 1, Colors.SOFT_GREEN,new HashSet<>(List.of(TileFeatureTypes.JUNGLE , TileFeatureTypes.SWAMP)),new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON,StrategicResourceTypes.HORSE,StrategicResourceTypes.COAL, BonusResourceTypes.COW, LuxuryResourceTypes.GOLD, LuxuryResourceTypes.JEWEL,LuxuryResourceTypes.COTTON,LuxuryResourceTypes.MARBLE,BonusResourceTypes.SHEEP))),// chamanzar
+    HEEL("heel", 0, 2, 0, 25, 2, Colors.RED,new HashSet<>(List.of(TileFeatureTypes.JUNGLE, TileFeatureTypes.FOREST)), new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON, StrategicResourceTypes.COAL , BonusResourceTypes.GAZELLE , LuxuryResourceTypes.GOLD,LuxuryResourceTypes.SILVER,LuxuryResourceTypes.JEWEL, LuxuryResourceTypes.MARBLE,BonusResourceTypes.SHEEP))),
+    MOUNTAIN("mountain", 0, 0, 0, 25, 9999, Colors.GREY,new HashSet<>(List.of()), new HashSet<>()),
+    OCEAN("ocean", 0, 0, 0, 25, 9999, Colors.OCEAN_BLUE,new HashSet<>(List.of()), new HashSet<>()),
+    PLAIN("plain", 1, 1, 0, -33, 1, Colors.YELLOW,new HashSet<>(List.of(TileFeatureTypes.JUNGLE , TileFeatureTypes.FOREST)), new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON,StrategicResourceTypes.HORSE,StrategicResourceTypes.COAL,BonusResourceTypes.WHEAT,LuxuryResourceTypes.GOLD,LuxuryResourceTypes.JEWEL,LuxuryResourceTypes.MARBLE,LuxuryResourceTypes.IVORY,LuxuryResourceTypes.COTTON,LuxuryResourceTypes.INCENSE,BonusResourceTypes.SHEEP))), // dasht
     SNOW("snow", 0, 0, 0, -33, 1, Colors.WHITE,new HashSet<>(List.of()),new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON))),
     TUNDRA("tundra", 1, 0, 0, -33, 1, Colors.PINK, new HashSet<>(List.of(TileFeatureTypes.JUNGLE)), new HashSet<>(Arrays.asList(StrategicResourceTypes.IRON,StrategicResourceTypes.HORSE, BonusResourceTypes.GAZELLE , LuxuryResourceTypes.SILVER,LuxuryResourceTypes.JEWEL, LuxuryResourceTypes.MARBLE, LuxuryResourceTypes.COTTON)));
 
@@ -50,7 +49,7 @@ public enum TileBaseTypes implements TileTypes {
 
     public static TileBaseTypes generateRandom() {
         Random rand = new Random();
-        return TileBaseTypes.values()[rand.nextInt(TileBaseTypes.values().length - 1)];
+        return TileBaseTypes.values()[rand.nextInt(TileBaseTypes.values().length)];
     }
 
     public String getName() {
